Adjust overflow issue

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 body {
   font-family: Helvetica, Arial, sans-serif;
-  overflow: hidden;
 }
 
 /* Navbar styling */
